fixed overflow in hero

--- a/components/pages/Home/Benefits/Benefits.module.scss
+++ b/components/pages/Home/Benefits/Benefits.module.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/_variables';
 
 .benefits {
-    background-color: $blue;
+    background-color: $lightBlue;
     display: flex;
     flex-flow: column;
     padding: 80px 20px 60px;
