--- a/components/pages/Home/DNAtureSystem/DNAtureSystem.module.scss
+++ b/components/pages/Home/DNAtureSystem/DNAtureSystem.module.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/_variables';
 
 .dnatureSystem {
-    background-color: $orange;
+    background-color: $lightOrange;
     padding: 80px 20px;
     position: relative;
     overflow: hidden;
