--- a/components/pages/Home/Products/Products.module.scss
+++ b/components/pages/Home/Products/Products.module.scss
@@ -3,6 +3,7 @@
 .products {
     position: relative;
     padding-top: 80px;
+    background-color: white;
 
     &Title{
        margin-bottom: 40px;
@@ -27,7 +28,7 @@
             display: flex;
             align-items: center;
             position: relative;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.1);
+            box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.15);
 
             .filter {
                 position: absolute;
